update bot service without launch